@@ -20,6 +20,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -29,25 +30,13 @@ import com.google.common.collect.ImmutableList;
 import com.palantir.common.base.ClosableIterator;
 import com.palantir.common.base.ClosableIterators;
 import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.function.Consumer;
 import java.util.function.ToLongFunction;
 import one.util.streamex.StreamEx;
 import org.junit.Test;
 
 public final class TrackingClosableIteratorTest {
     private static final String STRING = "test";
-    private static final ClosableIterator<String> ONE_ELEMENT_ITERATOR =
-            ClosableIterators.wrapWithEmptyClose(List.of(STRING).iterator());
-    private static final ImmutableList<String> STRINGS = ImmutableList.of(
-            "test4", "test4", "test200", "composite", "", "t", "twentyElementString1", "tt", "twentyElementString2");
-
-    // these have to be anonymous inner classes rather than lambdas in order to spy
-    private static final Consumer<Long> NO_OP = new Consumer<>() {
-        @Override
-        public void accept(Long _unused) {}
-    };
+    // this has to be an anonymous inner class rather than a lambda in order to spy
     private static final ToLongFunction<String> STRING_LENGTH_MEASURER = new ToLongFunction<>() {
         @Override
         public long applyAsLong(String value) {
@@ -57,20 +46,25 @@ public final class TrackingClosableIteratorTest {
 
     @Test
     public void oneElementTrackingClosableIteratorIsWiredCorrectly() {
-        Consumer<Long> tracker = spy(NO_OP);
+        BytesReadTracker mockTracker = mock(BytesReadTracker.class);
         ToLongFunction<String> measurer = spy(STRING_LENGTH_MEASURER);
-        TrackingClosableIterator<String> trackingIterator =
-                new TrackingClosableIterator<>(ONE_ELEMENT_ITERATOR, tracker, measurer);
 
-        assertThat(trackingIterator).toIterable().containsExactlyElementsOf(List.of(STRING));
+        ClosableIterator<String> oneElementIterator = ClosableIterators.wrapWithEmptyClose(
+                ImmutableList.of(STRING).stream().iterator());
+
+        TrackingClosableIterator<String> trackingIterator =
+                new TrackingClosableIterator<>(oneElementIterator, mockTracker, measurer);
+
+        assertThat(trackingIterator).toIterable().containsExactlyElementsOf(ImmutableList.of(STRING));
         verify(measurer).applyAsLong(STRING);
-        verify(tracker).accept(STRING_LENGTH_MEASURER.applyAsLong(STRING));
-        verifyNoMoreInteractions(tracker, measurer);
+        verify(mockTracker).record(STRING_LENGTH_MEASURER.applyAsLong(STRING));
+        verifyNoMoreInteractions(mockTracker, measurer);
     }
 
     @Test
     public void multiElementTrackingClosableIteratorIsWiredCorrectly() {
         ArrayList<Long> consumed = new ArrayList<>();
+
         TrackingClosableIterator<String> trackingIterator =
                 new TrackingClosableIterator<>(createClosableStringIterator(), consumed::add, STRING_LENGTH_MEASURER);
 
@@ -87,21 +81,21 @@ public final class TrackingClosableIteratorTest {
 
     @Test
     public void trackingClosableStringIteratorDelegatesClose() {
-        ClosableIterator<String> iterator = spy(createClosableStringIterator());
+        ClosableIterator<String> mockIterator = mock(ClosableIterator.class);
         TrackingClosableIterator<String> trackingIterator =
-                new TrackingClosableIterator<>(iterator, NO_OP, STRING_LENGTH_MEASURER);
+                new TrackingClosableIterator<>(mockIterator, _unused -> {}, STRING_LENGTH_MEASURER);
         trackingIterator.close();
-        verify(iterator).close();
-        verifyNoMoreInteractions(iterator);
+        verify(mockIterator).close();
+        verifyNoMoreInteractions(mockIterator);
     }
 
     @Test
     public void trackingIteratorForwardsValuesDespiteExceptionAtMeasurement() {
-        ToLongFunction<String> measurer = spy(STRING_LENGTH_MEASURER);
-        when(measurer.applyAsLong(anyString())).thenThrow(RuntimeException.class);
+        ToLongFunction<String> mockMeasurer = mock(ToLongFunction.class);
+        when(mockMeasurer.applyAsLong(anyString())).thenThrow(RuntimeException.class);
 
         ClosableIterator<String> trackingIterator =
-                new TrackingClosableIterator<>(createClosableStringIterator(), NO_OP, measurer);
+                new TrackingClosableIterator<>(createClosableStringIterator(), _unused -> {}, mockMeasurer);
 
         assertThat(trackingIterator)
                 .toIterable()
@@ -110,11 +104,11 @@ public final class TrackingClosableIteratorTest {
 
     @Test
     public void trackingIteratorForwardsValuesDespiteExceptionAtConsumption() {
-        Consumer<Long> consumer = spy(NO_OP);
-        doThrow(RuntimeException.class).when(consumer).accept(anyLong());
+        BytesReadTracker mockTracker = mock(BytesReadTracker.class);
+        doThrow(RuntimeException.class).when(mockTracker).record(anyLong());
 
         ClosableIterator<String> trackingIterator =
-                new TrackingClosableIterator<>(createClosableStringIterator(), consumer, STRING_LENGTH_MEASURER);
+                new TrackingClosableIterator<>(createClosableStringIterator(), mockTracker, STRING_LENGTH_MEASURER);
 
         assertThat(trackingIterator)
                 .toIterable()
@@ -122,10 +116,17 @@ public final class TrackingClosableIteratorTest {
     }
 
     private static ClosableIterator<String> createClosableStringIterator() {
-        return ClosableIterators.wrapWithEmptyClose(createStringIterator());
-    }
+        ImmutableList<String> STRINGS = ImmutableList.of(
+                "test4",
+                "test4",
+                "test200",
+                "composite",
+                "",
+                "t",
+                "twentyElementString1",
+                "tt",
+                "twentyElementString2");
 
-    private static Iterator<String> createStringIterator() {
-        return STRINGS.stream().iterator();
+        return ClosableIterators.wrapWithEmptyClose(STRINGS.stream().iterator());
     }
 }
